[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.2"
numpy = "^1.23.5"
scipy = ">=1.3,<1.9"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
neuroCombat = "^0.2.12"
scikit-learn = "^1.1.3,<1.2"
treeinterpreter = "^0.2.3"
imbalanced-learn = "^0.9.1"
pillow = "^9.3.0"
statsmodels = "^0.13.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
