[tool.poetry]
name = "pythondeps"
version = "0.1.0"
description = "Containerized python environment"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^1.5.2"
numpy = "^1.23.5"
scipy = "^1.9.3"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
neuroCombat = "^0.2.12"
scikit-learn = "^1.1.3"
snakebids = "^0.7.1"
jupyterlab = "^3.5.0"
treeinterpreter = "^0.2.3"
imbalanced-learn = "^0.9.1"
pillow = "^9.3.0"
boruta = "^0.3"
h2o = "^3.40.0.3"
xgboost = "^1.7.5"
photonai = "^2.3.0"
nevergrad = "^0.6.0"
smac = "1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
